--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "dotenv>=0.9.9",
     "flask>=3.1.0",
     "gtfs-realtime-bindings>=1.0.0",
+    "gunicorn>=23.0.0",
     "requests>=2.32.3",
 ]
