--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ click==8.1.8
 dotenv==0.9.9
 flask==3.1.0
 gtfs-realtime-bindings==1.0.0
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 jinja2==3.1.6
 markupsafe==3.0.2
+packaging==25.0
 protobuf==6.30.2
 python-dotenv==1.1.0
 requests==2.32.3
